# edge-proxy

./: .gitignore  Cargo.toml  README.md  architecture.toml  bootstrap.sh
docs/: README.md  architecture.md
examples/: basic.rs  dispatch.rs
main/proxy/: Cargo.toml
proxy/: Cargo.toml  deny.toml
proxy/main/src/api/job/: mod.rs
proxy/main/src/api/job/error/: mod.rs
proxy/main/src/api/lifecycle/: mod.rs
proxy/main/src/api/lifecycle/traits/: mod.rs  monitor.rs
proxy/main/src/api/router/error/: routing_error.rs
proxy/main/src/api/router/traits/: mod.rs  router.rs
proxy/main/src/api/types/: mod.rs
proxy/main/src/api/validator/: mod.rs
proxy/main/src/api/validator/traits/: mod.rs  noop_validator.rs
proxy/main/src/core/lifecycle/: mod.rs  null_lifecycle_monitor.rs
proxy/main/src/core/validator/: noop_validator.rs
proxy/main/src/gateway/: mod.rs
proxy/main/src/gateway/ingress/: mod.rs
proxy/main/src/saf/: mod.rs  proxy_svc.rs
proxy/scripts/hooks/: pre-commit
proxy/tests/: router_int_test.rs
scm/: CHANGELOG.md  Cargo.toml  README.md  bootstrap.ps1  bootstrap.sh
scm/docs/: README.md  architecture.md
scm/docs/adr/: ADR-001-security-context-propagation.md  ADR-002-handler-context-construction.md
scm/examples/: dispatch.rs
scm/main/src/: lib.rs
scm/main/src/api/: mod.rs
scm/main/src/api/job/: mod.rs  null_job.rs
scm/main/src/api/job/error/: job_error.rs
scm/main/src/api/job/errors/: job_error.rs
scm/main/src/api/job/traits/: job.rs
scm/main/src/api/job/types/: as_null_job_marker_request.rs  as_null_job_marker_response.rs  as_null_job_request.rs  as_null_job_response.rs  execution_request.rs  mod.rs  null_job_marker.rs
scm/main/src/api/lifecycle/: mod.rs  null_lifecycle_monitor.rs
scm/main/src/api/lifecycle/errors/: lifecycle_error.rs
scm/main/src/api/lifecycle/traits/: lifecycle_monitor.rs  mod.rs  null_lifecycle_monitor_api.rs
scm/main/src/api/lifecycle/types/: component_health.rs  component_request.rs  component_response.rs  health_request.rs  health_response.rs  mod.rs  shutdown_request.rs  start_background_tasks_request.rs  status_request.rs  status_response.rs
scm/main/src/api/proxy/: mod.rs  proxy_svc.rs
scm/main/src/api/proxy/errors/: mod.rs  proxy_composer_error.rs
scm/main/src/api/proxy/traits/: mod.rs  proxy_composer.rs
scm/main/src/api/proxy/types/: application_config_builder.rs  bootstrap_name_request.rs  bootstrap_name_response.rs  mod.rs
scm/main/src/api/router/: mod.rs  null_router.rs
scm/main/src/api/router/errors/: mod.rs
scm/main/src/api/router/traits/: router.rs
scm/main/src/api/router/types/: as_null_router_marker_request.rs  as_null_router_marker_response.rs  as_null_router_request.rs  as_null_router_response.rs  mod.rs  null_router_marker.rs  route_request.rs  route_response.rs
scm/main/src/api/tests/: mod.rs
scm/main/src/api/types/: application_config_builder.rs
scm/main/src/api/validator/: mod.rs
scm/main/src/api/validator/traits/: validator.rs
scm/main/src/api/validator/types/: mod.rs  validation_request.rs
scm/main/src/core/: mod.rs
scm/main/src/core/job/: mod.rs  null_job.rs
scm/main/src/core/lifecycle/: component_health.rs  health_response.rs  mod.rs  noop_lifecycle_monitor.rs  null_lifecycle_monitor.rs
scm/main/src/core/proxy/: application_config_builder.rs  mod.rs  proxy_composer_impl.rs  proxy_composition.rs  proxy_svc.rs
scm/main/src/core/router/: mod.rs  null_router.rs
scm/main/src/core/tests/: mod.rs
scm/main/src/core/validator/: noop_validator.rs
scm/main/src/gateway/: mod.rs
scm/main/src/saf/: job_svc.rs  lifecycle_monitor_svc.rs  mod.rs  monitor_svc.rs  noop_validator_svc.rs  noop_validator_svc_factory.rs  null_lifecycle_monitor_svc.rs  proxy_svc.rs  router_svc.rs  validator_svc.rs
scm/main/src/saf/job/: job_svc.rs  job_svc_factory.rs  mod.rs
scm/main/src/saf/lifecycle/: lifecycle_monitor_svc.rs  lifecycle_monitor_svc_factory.rs  mod.rs
scm/main/src/saf/monitor/: mod.rs  monitor_svc.rs  monitor_svc_factory.rs
scm/main/src/saf/null/: mod.rs  null_lifecycle_monitor_svc_factory.rs
scm/main/src/saf/proxy/: mod.rs  proxy_composer_svc.rs  proxy_composer_svc_factory.rs
scm/main/src/saf/router/: mod.rs  router_svc.rs  router_svc_factory.rs
scm/main/src/saf/validator/: mod.rs  validator_svc.rs  validator_svc_factory.rs
scm/main/src/spi/: canonical.rs  mod.rs
scm/scripts/hooks/: pre-commit
scm/tests/: api_int_test.rs  application_config_builder_int_test.rs  health_report_int_test.rs  health_status_int_test.rs  health_types_int_test.rs  job_e2e_test.rs  job_error_int_test.rs  job_int_test.rs  job_svc_factory_int_test.rs  job_svc_int_test.rs  lifecycle_monitor_e2e_test.rs  lifecycle_monitor_int_test.rs  lifecycle_monitor_svc_factory_int_test.rs  lifecycle_monitor_svc_int_test.rs  monitor_e2e_test.rs  monitor_svc_factory_int_test.rs  monitor_svc_int_test.rs  noop_validator_e2e_test.rs  noop_validator_int_test.rs  noop_validator_svc_factory_int_test.rs  noop_validator_svc_int_test.rs  null_job_int_test.rs  null_job_marker_int_test.rs  null_lifecycle_monitor_api_int_test.rs  null_lifecycle_monitor_int_test.rs  null_lifecycle_monitor_svc_factory_int_test.rs  null_lifecycle_monitor_svc_int_test.rs  null_monitor_traits_int_test.rs  null_router_int_test.rs  null_router_marker_int_test.rs  proxy_composer_e2e_test.rs  proxy_composer_int_test.rs  proxy_composer_svc_factory_int_test.rs  proxy_composer_svc_int_test.rs  proxy_pattern_int_test.rs  proxy_svc_int_test.rs  router_e2e_test.rs  router_int_test.rs  router_svc_factory_int_test.rs  router_svc_int_test.rs  (+5 more)
scripts/ci/: test.sh
src/: lib.rs
tests/: application_config_builder_int_test.rs  component_health_int_test.rs  health_status_int_test.rs  health_types_int_test.rs  job_error_int_test.rs  job_int_test.rs  lifecycle_error_int_test.rs  lifecycle_monitor_int_test.rs  noop_validator_int_test.rs  null_lifecycle_monitor_api_int_test.rs  null_lifecycle_monitor_int_test.rs  proxy_svc_int_test.rs  routing_error_int_test.rs  saf_factory_int_test.rs  traits_int_test.rs  validator_int_test.rs
(+83 files in other folders)
