[package]
name = "edge-proxy"
version = "0.1.0"
edition = "2021"
license      = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/edge"
authors = ["SWE Engineering Labs"]
rust-version = "1.95"
description = "edge — L2 Proxy: dispatch facade (Job, Router, LifecycleMonitor)"
keywords = ["proxy", "orchestration", "facade", "sea", "swe"]
categories = ["development-tools"]

[dependencies]
thiserror              = "2"
futures                = "0.3"
serde                  = { version = "1", features = ["derive"] }
parking_lot            = "0.12"
edge-domain = { path = "../domain" }
swe-edge-configbuilder = { path = "../configbuilder/main/features/configbuilder" }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }

[package.metadata.struct-engine]
application_type = "lib"
service_type = "proxy"


[lib]
path = "src/lib.rs"

[[test]]
name = "null_lifecycle_monitor_int_test"
path = "tests/null_lifecycle_monitor_int_test.rs"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[[test]]
name = "saf_factory_int_test"
path = "tests/saf_factory_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"
