[workspace]
resolver = "2"
members  = ["proxy"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"

[workspace.lints.rust]
unsafe_code  = "deny"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
