[package]
name         = "edge-proxy"
version      = "0.3.4"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-proxy"
description  = "edge — L2 Proxy: dispatch facade (Job, Router, LifecycleMonitor)"
keywords     = ["proxy", "orchestration", "facade", "sea", "swe"]
categories   = ["development-tools"]

[package.metadata.arch]
application_type = "lib"
service_type     = "proxy"

[lib]
path = "main/src/lib.rs"

[dependencies]
thiserror              = "2"
futures                = "0.3"
serde                  = { version = "1", features = ["derive"] }
parking_lot            = "0.12"
edge-domain-handler   = { git = "https://github.com/sweengineeringlabs/edge-domain.git", tag = "v0.11.5" }
edge-domain-command   = { git = "https://github.com/sweengineeringlabs/edge-domain.git", tag = "v0.11.5" }
edge-domain-security  = { git = "https://github.com/sweengineeringlabs/edge-domain.git", tag = "v0.11.5" }
edge-domain-observer  = { git = "https://github.com/sweengineeringlabs/edge-domain.git", tag = "v0.11.5" }
swe-edge-configbuilder = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git", tag = "v0.3.0" }

[dev-dependencies]
async-trait           = "0.1"
tokio                 = { version = "1", features = ["macros", "rt"] }
edge-domain-observer  = { git = "https://github.com/sweengineeringlabs/edge-domain.git", tag = "v0.11.5" }

[lints.rust]
unsafe_code  = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
